added file name as subtitle

--- a/docs/source/files/assignments/01.rst
+++ b/docs/source/files/assignments/01.rst
@@ -1,6 +1,9 @@
 1. Riemann Solver
 ==================
 
+File: Fwave.cpp (and Fwave.h)
+----------------------------
+
 computeEigenvalues()
 ^^^^^^^^^^^^^^^^^^^^^^^^^
 First we compute 
