--- a/docs/source/files/assignments/02.rst
+++ b/docs/source/files/assignments/02.rst
@@ -1,6 +1,8 @@
 2. Finite Volume Discretization
 *********************************
 
+All project authors contributed to this assignment in equal parts.
+
 Task 2.0
 ===============
 
