--- a/docs/source/files/assignments/02.rst
+++ b/docs/source/files/assignments/02.rst
@@ -26,14 +26,18 @@ To allow for an easy change of which solver will be used, we implemented another
         solver = "fwave";
     }
 
-This parameter is passed to the WavePropagation class in its constructor:
+.. note:: 
+    The ``WavePropagation1d`` class depends on a set solver. 
+    Furthermore, the chosen solver will not change within one query. 
+    Therefore we decided on just passing the solver as a parameter to the ``WavePropagation1d`` class constructor.
+    This allows for an easy implementation without setters and getters:
 
 .. code:: cpp
 
     tsunami_lab::patches::WavePropagation *l_waveProp;
     l_waveProp = new tsunami_lab::patches::WavePropagation1d( l_nx, solver );
 
-In the WavePropagation1d file, we make use of simple if-conditions to execute the chosen solver:
+In the ``WavePropagation1d.cpp`` file, we make use of simple if-conditions to utilize the correct solver:
 
 (**File: WavePropagation1d.cpp**)
 
@@ -62,19 +66,14 @@ Shock-Shock Problem
 
 .. code:: cpp
 
-    tsunami_lab::t_real tsunami_lab::setups::ShockShock1d::getHeight(   t_real i_x,
-                                                                        t_real) const {
+    tsunami_lab::t_real tsunami_lab::setups::ShockShock1d::getHeight(   t_real,
+                                                                    t_real) const {
         return m_height;
     }
 
     tsunami_lab::t_real tsunami_lab::setups::ShockShock1d::getMomentumX( t_real i_x,
-                                                                         t_real) const {
-        if( i_x <= m_xdis ) {
-            return m_momentumLeft;
-        }
-        else {
-            return -m_momentumLeft;
-        }
+                                                                     t_real) const {
+        return i_x <= m_xdis ? m_momentumLeft : -m_momentumLeft;
     }
 
 Rare-Rare Problem
@@ -83,17 +82,13 @@ Rare-Rare Problem
 .. code:: cpp
 
     tsunami_lab::t_real tsunami_lab::setups::RareRare1d::getHeight( t_real,
-                                                                    t_real  ) const {
+                                                                t_real      ) const {
         return m_height;
     }
 
-    tsunami_lab::t_real tsunami_lab::setups::RareRare1d::getMomentumX(  t_real i_x,
-                                                                        t_real ) const {
-        if (i_x <= m_xdis) {
-            return -m_momentumLeft;
-        } else {
-            return m_momentumLeft;
-        }
+    tsunami_lab::t_real tsunami_lab::setups::RareRare1d::getMomentumX( t_real i_x,
+                                                                   t_real ) const {
+        return i_x <= m_xdis ? -m_momentumLeft : m_momentumLeft;
     }
 
 Task 2.1.2 - Observations
