--- a/docs/source/files/assignments/02.rst
+++ b/docs/source/files/assignments/02.rst
@@ -17,13 +17,13 @@ To allow for an easy change of which solver will be used, we implemented another
 
     if(i_argc >= 3){
         if(std::string(i_argv[2]) == "roe" || std::string(i_argv[2]) == "fwave"){
-            solver = i_argv[2];
+            l_solver = i_argv[2];
         }else {
             std::cout << "invalid argument: solver parameter only accepts: roe, fwave" << std::endl;
             return EXIT_FAILURE;
         }
     }else{
-        solver = "fwave";
+        l_solver = "fwave";
     }
 
 .. note:: 
@@ -35,7 +35,7 @@ To allow for an easy change of which solver will be used, we implemented another
 .. code:: cpp
 
     tsunami_lab::patches::WavePropagation *l_waveProp;
-    l_waveProp = new tsunami_lab::patches::WavePropagation1d( l_nx, solver );
+    l_waveProp = new tsunami_lab::patches::WavePropagation1d( l_nx, l_solver );
 
 In the ``WavePropagation1d.cpp`` file, we make use of simple if-conditions to utilize the correct solver:
 
@@ -43,8 +43,8 @@ In the ``WavePropagation1d.cpp`` file, we make use of simple if-conditions to ut
 
 .. code::
 
-    if(solver=="roe") { ... }
-    else if(solver=="fwave") { ... }
+    if(m_solver=="roe") { ... }
+    else if(m_solver=="fwave") { ... }
 
 Task 2.0.2 - Sanity check using middle_states.csv
 ----------------------------------------------------
@@ -66,13 +66,13 @@ Shock-Shock Problem
 
 .. code:: cpp
 
-    tsunami_lab::t_real tsunami_lab::setups::ShockShock1d::getHeight(   t_real,
-                                                                    t_real) const {
+    tsunami_lab::t_real tsunami_lab::setups::ShockShock1d::getHeight( t_real,
+                                                                      t_real  ) const {
         return m_height;
     }
 
     tsunami_lab::t_real tsunami_lab::setups::ShockShock1d::getMomentumX( t_real i_x,
-                                                                     t_real) const {
+                                                                         t_real      ) const {
         return i_x <= m_xdis ? m_momentumLeft : -m_momentumLeft;
     }
 
@@ -82,12 +82,12 @@ Rare-Rare Problem
 .. code:: cpp
 
     tsunami_lab::t_real tsunami_lab::setups::RareRare1d::getHeight( t_real,
-                                                                t_real      ) const {
+                                                                    t_real  ) const {
         return m_height;
     }
 
     tsunami_lab::t_real tsunami_lab::setups::RareRare1d::getMomentumX( t_real i_x,
-                                                                   t_real ) const {
+                                                                       t_real      ) const {
         return i_x <= m_xdis ? -m_momentumLeft : m_momentumLeft;
     }
 
