--- a/docs/source/files/assignments/02.rst
+++ b/docs/source/files/assignments/02.rst
@@ -78,131 +78,89 @@ The output is a vector of strings, which represents the, by the separator charac
     Because the middle_states sanity check is much more extensive code- and time consumption-wise, we decided to implement it 
     in a new and separate executable: ``sanitychecks``. 
 
-In ``sanitychecks.cpp`` there are currenty 3 functions: ``main()``, ``middleStatesSanityCheck()`` and ``calculateHStar()``. 
-We will go through all of them here individually.
+In ``sanitychecks.cpp`` we run a Catch2 test using the ``middle_states.csv`` data.
+This test starts off with a few parameters, such as 
 
-The main function will simply serve as an entry point for all upcoming sanity checks. 
-If one of them fails, the whole executable will return ``EXIT_FAILURE``.
+* ``l_accuracy``: required accuracy when comparing our computed result with the given hStar
+* ``l_tests``: amount of tests to run
+* ``l_nx`` / ``l_ny``: cell amount
+* ``l_size``: simulation size
+* ``l_solver``: solver choice
+* ``l_xdis``: discontinuity location x coordinate (we used ``l_size / 2``)
+
+During the test, we keep track of how many tests actually passed using the variables ``l_executedTests`` and ``l_passedTests``.
+
+To read the ``middle_states.csv`` file, we iterate through the documents lines using a loop and get the respective values using the ``splitLine()`` function:
 
 **File: sanitychecks.cpp**
 
 .. code:: cpp
 
-    int main()
+    while (getline(l_inputFile, l_line) && l_executedTests < l_tests)
     {
-        if (middleStatesSanityCheck() != 0)
-            return EXIT_FAILURE;
-        return 0;
+        // ignore lines starting with #
+        if (l_line.substr(0, 1) != "#")
+        {
+        // extract data from csv line
+        l_row = tsunami_lab::io::Csv::splitLine(std::stringstream(l_line), ',');
+
+        // construct setup
+        tsunami_lab::setups::Setup *l_setup;
+        l_setup = new tsunami_lab::setups::GeneralDiscontinuity1d(std::stof(l_row[0]),
+                                                                std::stof(l_row[1]),
+                                                                std::stof(l_row[2]),
+                                                                std::stof(l_row[3]),
+                                                                l_xdis);  
+
+        [...]
+
+        }
     }
 
-The next function is ``middleStatesSanityCheck()``. To start off, we are given two options for adjustability:
+We then setup the solver and calculate the waves exactly as done in the ``main.cpp``, just without printing the results to files.
+After the calculation has run a specified amount of time, we retrieve our hStar as the height of the cell located at ``l_xdis``:
 
 .. code:: cpp
 
-    // accuracy when comapring given hStar to calculated value
-    tsunami_lab::t_real l_accuracy = 0.001;
-    // amount of tests to run
-    tsunami_lab::t_real l_tests = 10000;
+    l_hStarApproximation = l_waveProp->getHeight()[tsunami_lab::t_idx(l_xdis / l_dxy)];
 
-.. note::
-    The ``middle_states.csv`` file currently contains 1 million samples. 
-    The ``l_tests`` variable determines how many of those will be used, starting from the top of the document.
-
-
-Next, the ``middle_states.csv`` file is loaded up and ``splitLine()`` is called for each line which
-does not start with a `#`. With the values returned by ``splitLine()`` we call the ``calculateHStar()`` function.
-While its name is already pretty self explanatory, we will take a closer look at the calculation process later.
-The ``middleStatesSanityCheck()`` function then compares the calculated hStar value to the given one:
-
-.. code::
-
-      // compare calculated and given values
-      std::cout << "hStar diff: " << abs(l_hStar - std::stof(l_row[4])) << std::endl;
-      if (abs(l_hStar - std::stof(l_row[4])) > l_accuracy)
-      {
-        std::cout << "TEST FAILED" << std::endl;
-      }
-      else
-      {
-        l_passedTests++;
-      }
-      l_executedTests++;
-
-While it does so, it keeps track of how many tests were executed and how many of them actually passed.
-This is useful, because:
-
-.. note::
-    We decided that it suffices to only require at least 99% of all tests to pass. 
-    
-A simple if-else-clause was used to implement the requirement.
+Next, we compare this value to the given hStar of the `csv` file:
 
 .. code:: cpp
 
-    if (l_passedTests >= 0.99 * l_executedTests)
+    if (abs(l_hStarApproximation - l_hStar) <= l_accuracy)
     {
-        std::cout << "MIDDLE STATES TEST PASSED" << std::endl;
-        return 0;
+        ++l_passedTests;
     }
     else
     {
-        std::cout << "MIDDLE STATES TEST FAILED" << std::endl;
-        return EXIT_FAILURE;
+        std::cout << "TEST #" << l_executedTests << " (" << l_steps << " steps) FAILED! Missed target by " << abs(l_hStarApproximation - l_hStar) << std::endl;
     }
+    ++l_executedTests;
 
-Now onto how we calculate hStar.
-
-``calculateHStar()`` starts off with a few variables for adjustability:
+.. note::
+    
+    The catch2 test only passes if at least 99% of all calculations were within the given accuracy margin:
 
 .. code:: cpp
 
-    // cell amount in x and y direction
-    tsunami_lab::t_idx l_nx = 100;
-    tsunami_lab::t_idx l_ny = 1;
-    // simulation size
-    tsunami_lab::t_real l_dxy = 10.0 / l_nx;
-    // amount of calculated steps (more steps -> higher accuracy)
-    tsunami_lab::t_idx l_steps = 1000;
-    // solver choice
-    std::string l_solver = "fwave";
+    REQUIRE(l_passedTests / static_cast<double>(l_executedTests) >= 0.99);
 
-While most of those parameters are already known from the ``main.cpp`` file,
-we introduced ``l_steps`` to switch from a time limit to a step limit here. 
-This value defines the amount of calculation steps each simulation will do.
-For now we chose the value 1000 because it seems to be a sweet spot between the accuracy and 
-calculation time we are looking for.
-
-Next, we use a new setup ``MiddleStates``, set up the solver and run the simulation:
-
-.. code::
-
-    // iterate given amount of steps
-    tsunami_lab::t_idx l_i;
-    for (l_i = 0; l_i < l_steps; l_i++)
-    {
-        l_waveProp->setGhostOutflow();
-        l_waveProp->timeStep(l_scaling);
-    }
-    // return height at the location of the discontinuity
-    return l_waveProp->getHeight()[(int)(l_dxy / 2)];
-    }
-
-At the end, the function returns the water height at the location of the discontinuity, hStar.
-
-To finish this task, we will take a brief look into the ``MiddleStates`` setup:
+To finish this task, we will take a brief look into the ``GeneralDiscontinuity1d`` setup:
 
 (You may view the inputs and outputs here: :ref:`ns-setups`)
 
-(**File: MiddleStates.cpp**)
+(**File: GeneralDiscontinuity1d.cpp**)
 
 .. code::
 
-    tsunami_lab::t_real tsunami_lab::setups::MiddleStates::getHeight(t_real i_x,
+    tsunami_lab::t_real tsunami_lab::setups::GeneralDiscontinuity1d::getHeight(t_real i_x,
                                                                  t_real) const
     {
         return i_x < m_xdis ? m_heightLeft : m_heightRight;
     }
 
-    tsunami_lab::t_real tsunami_lab::setups::MiddleStates::getMomentumX(t_real i_x,
+    tsunami_lab::t_real tsunami_lab::setups::GeneralDiscontinuity1d::getMomentumX(t_real i_x,
                                                                     t_real) const
     {
         return i_x < m_xdis ? m_momentumLeft : m_momentumRight;
